[gd_scene load_steps=5 format=3 uid="uid://bx43485l5x8sk"]

[ext_resource type="Script" path="res://scripts/table/text_edit_no_tab.gd" id="1_rewxg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmbee"]
bg_color = Color(0.145098, 0.145098, 0.14902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ntpg1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ne06"]
bg_color = Color(1, 1, 1, 0)

[node name="TextEditNoTab" type="PanelContainer"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wmbee")
script = ExtResource("1_rewxg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="TextEdit" type="TextEdit" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ntpg1")
theme_override_styles/focus = SubResource("StyleBoxFlat_7ne06")
scroll_fit_content_height = true

[connection signal="focus_entered" from="MarginContainer/TextEdit" to="." method="_on_text_edit_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/TextEdit" to="." method="_on_text_edit_focus_exited"]
[connection signal="gui_input" from="MarginContainer/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="text_changed" from="MarginContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
